# manual-test-agent-mta

./: .env.example  .gitignore  README.md  mta.config.toml.example  pyproject.toml
src/mta/: __main__.py  anchor.py  arbiter.py  author.py  browser.py  cache.py  cli.py  config.py  executor.py  orchestrator.py  parser.py  replay.py  snapshot.py  tools.py  vision.py
src/mta/llm/: __init__.py  anthropic_client.py  client.py  openrouter_client.py
tests/: test_anchor.py  test_anthropic_client.py  test_arbiter.py  test_author.py  test_browser.py  test_cache_reader.py  test_cache_writer.py  test_cli.py  test_config.py  test_executor.py  test_llm_client.py  test_openrouter_client.py  test_orchestrator.py  test_parser.py  test_replay.py  test_snapshot.py  test_tools.py  test_vision.py
