[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mta"
version = "0.1.0"
requires-python = ">=3.11"
description = "Manual Test Agent — hybrid browser testing with LLM-driven author, deterministic replay, and targeted heal"

[project.scripts]
mta = "mta.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
